# chat-history

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  config.py  embeddings.py  exporter.py  history.py  llms.py  manage.py  parsers.py  pyproject.toml  server.py  services.py  utils.py
chat_history/: app.py  cli.py  coerce.py  config.py  embeddings.py  exporter.py  models.py  parsers.py  server.py  services.py  storage.py  validation.py
chat_history/static/: index.html  script.js  style.css
chat_history/static/js/: common.js  search.js  statistics.js
chat_history/static/js/activity/: charts.js  controller.js  dashboard.js  state.js
chat_history/static/js/main/: controller.js  conversations.js  day-filter.js  loaders.js  navigation.js  sidebar.js
chat_history/static/js/messages/: blocks.js  controller.js
data/: secrets.template.toml
plans/: MULTIMODAL.md  TOOL.md  UPGRADE.md
static/: activity.js  index.html  modified_index.html  script.js  style.css  upload.html  upload_page.html
tests/: test_api.py  test_cli.py  test_config.py  test_exporter.py  test_parsers.py
tests/fixtures/: chatgpt_2026_sample.json  claude_2026_sample.json  gemini_2026_sample.json
