[project]
name = "chat-history"
version = "0.2.0"
description = "Local UI and tooling for browsing ChatGPT and Claude history exports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "markdown>=3.9",
    "openai>=1.108.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
