[project]
name = "chat-history"
version = "0.3.3"
description = "Local UI and tooling for browsing ChatGPT and Claude history exports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "markdown>=3.9",
    "numpy>=2.0.0",
    "openai>=1.108.0",
    "python-dotenv>=1.1.1",
    "questionary>=2.1.1",
    "rich>=14.1.0",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
chat-history = "chat_history.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["chat_history"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
